﻿
2006-10-14  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c: Move the chat panel to the right or the bottom of
	the screen. Based on a patch by Rich Harkins <rich@worldsinfinite.com>
	which required a restart.
	* ChangeLog: Enabled a BOM, so the comment about utf-8 is no longer
	required.

2006-10-01  Rich Harkins <rich@worldsinfinite.com>
	* Makefile.am, server/gtk/main.c: Launch the client from the server.

2006-09-16  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Subversion repository is at 0.10.3.
	* server/gtk/Makefile.am, server/gtk/pioneers-server.rc: Add Windows
	icon for the server.

2006-09-16  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.10.2

2006-09-16  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c, server/gtk/main.c, server/main.c,
	client/gtk/offline.c, client/ai/ai.c: Added --version.
	* common/network.h, common/network.c, meta-server/main.c,
	server/player.c, server/server.c, server/server.h, server/admin.c: Use
	net_closesocket to close a socket (Windows port closes sockets
	differently).
	* common/gtk/gtkbugs.c: Cannot press a button twice without moving the
	cursor out and in again. The workaround depends on the runtime version
	of Gtk+, not the version at compile time. (Refinement of the patch
	2006-09-03)
	* server/meta.c: Log when unknown messages are sent from the meta
	server.
	* Makefile.am: Add 48x48 icons (for Windows XP, Thumbnail view).

2006-09-12  Stefan Walter <sw@gegenunendlich.de>
	* common/Makefile.am: Creation of version.h compatible with FreeBSD.

2006-09-12  Roland Clobus <rclobus@bigfoot.com>
	* server/meta.c, meta-server/main.c: Meta server disconnects
	unresponsive servers. Server shows a message when the meta server
	disconnects.
	* client/gtk/interface.c: Don't change GUI state when a second quote
	is issued.
	* common/game.c: Return NULL pointer when game not found.

2006-09-10  Bas Wijnen <wijnen@debian.org>
	* common/game.c: Treat errors in files as end-of-file, and an