@@ -5,6 +5,8 @@
 	which required a restart.
 	* ChangeLog: Enabled a BOM, so the comment about utf-8 is no longer
 	required.
+	* configure.ac, server/gtk/main.c, server/server.c, server/server.h,
+	server/main.c: Replaced alarm with g_timeout_add.
 
 2006-10-01  Rich Harkins <rich@worldsinfinite.com>
 	* Makefile.am, server/gtk/main.c: Launch the client from the server.
